# autodoc

./: .gitignore  .travis.yml  README.md  find_custom.sh
boilerplate/: configuration-management.tex  debug.tex  document-outline.tex  general-acronyms.tex  general-terms.tex  instructions.tex  macros.tex  plan-overview.tex  process-owners.tex  project-directories.tex  project-files.tex  references.tex  results-synthesis.tex  run-protocol.tex  signatures.tex  sop-list.tex  standard-phrases.tex  test-environment.tex  test-evidence.tex  training.tex
boilerplate/code-review/: document-outline.tex  main.tex  purpose.tex  standard-phrases.tex
boilerplate/customize/: customize.tex  sop-list.tex
boilerplate/data/: abbreviations.tex  additional-layout.tex  definitions.tex  header-footer.tex  version.tex
boilerplate/debug-test/: main.tex
boilerplate/design-review/: document-outline.tex  main.tex  purpose.tex  review.tex  scope.tex  standard-phrases.tex
boilerplate/dhf-doc/: document-outline.tex  document.tex  main.tex  standard-phrases.tex
boilerplate/macros/: colors.tex  debug.tex  dhf-list.tex  graphic-files.tex  reference-documents.tex  static-analysis-rules.tex  table-column-header.tex  table-head-font-style.tex  test-evidence.tex  two-column-table.tex  use-autodoc-data-file.tex  use-autodoc-file.tex  use-glossaries.tex  utilities.tex
boilerplate/placeholder/: environment.tex  (+4 more)
doc/: sprint.md
git-validation/: equipment.tex  git-validation.tex  git-validation.texx  intended-use.tex  test-output.tex  test-results.tex
github-validation/protocols/: abstract.tex  equipment.tex  github-validation.tex  github-validation.texx  gitprotocols.cabal  prerequisites.tex  protocol-list.tex
github-validation/protocols/src/: Main.hs  Main.tex
github-validation/protocols/src/CheckInstall/: Protocol.hs  Protocol.tex
github-validation/protocols/src/CloneRepo/: Protocol.hs  Protocol.tex
github-validation/protocols/src/CreateQuickFix/: Protocol.hs  Protocol.tex
github-validation/protocols/src/CreateRepo/: Protocol.hs  Protocol.tex
github-validation/protocols/src/GitConfig/: Protocol.hs  Protocol.tex
github-validation/protocols/src/MergeQuickFix/: Protocol.hs  Protocol.tex
github-validation/protocols/src/RevertDelete/: Protocol.hs  Protocol.tex
github-validation/protocols/src/Settings/: Constants.hs
github-validation/protocols/src/TagCommits/: Protocol.hs  Protocol.tex
github-validation/protocols/src/UndoQuickFix/: Protocol.hs  Protocol.tex
language-translation/: equipment.tex  intended-use.tex  language-translation.tex  language-translation.texx  overview.tex  test-output.tex
report/: report-name.md
starterkit/: equipment.tex  overview.tex  starterkit.tex
starterkit/protocols/: abstract.tex  acronyms.tex  equipment.tex  intended-use.tex  overview.tex  prerequisites.tex  starterkit.tex  starterkit.texx  starterkitprotocols.cabal  test-output.tex
starterkit/protocols/data/: additional-layout.tex
starterkit/protocols/src/: Main.hs
starterkit/protocols/src/CheckInstall/: Protocol.hs  Protocol.tex
starterkit/protocols/src/Settings/: Constants.hs
(+247 files in other folders)
