-- Starterkit

name:                starterkitprotocols
version:             1.0.0.0
synopsis:            Protocols used to validate HMST Starterkit for its intended-use in medical device software development.
homepage:            http://www.amgen.com/
license:             AllRightsReserved
author:              Systems Informatics
maintainer:          systemsinformatics@amgen.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:   Settings.Constants
                    ,CheckInstall.Protocol
  hs-source-dirs:    src
  build-depends:     base
                    ,test-runner
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror

executable           StarterkitProtocols
  main-is:           Main.hs
  hs-source-dirs:    src
  build-depends:     base
                    ,test-runner
                    ,process
                    ,starterkitprotocols
  other-modules:     Settings.Constants
                    ,CheckInstall.Protocol
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror

